--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,10 @@ color: #404bbf;
  padding: 188px 0;
  background-color: #2e2f42;
  color: #ffffff;
+ background-image: linear-gradient( to bottom, 
+ rgba(46, 47, 66, 0.7),
+  rgba(46, 47, 66, 0.7)),
+  url(../images/people-office\ 1.png);
 }
 
 .h-one {
