--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,9 @@ color: #404bbf;
  rgba(46, 47, 66, 0.7),
   rgba(46, 47, 66, 0.7)),
   url(../images/people-office\ 1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .h-one {
@@ -177,6 +180,23 @@ margin-right:auto;
 .section-info-item {
     width: calc((100% - 72px) / 4);
 }
+
+.container-info-icon {
+    margin-bottom: 8px;
+    width: 264px;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+}
+
+.info-icon {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
 .h-three-p {
     font-weight: 400;
     font-size: 16px;
@@ -259,6 +279,36 @@ margin-right:auto;
     row-gap: 48px; 
 }
 
+.link-portfolio:hover .container-p,
+.link-portfolio:focus .container-p{
+transform:translateX(0);
+    background-color: #4d5ae5;
+width: 360px;
+height: 300px;
+}
+
+.portfolio-item {
+    position: relative;
+}
+
+.container-text {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+width: 360px;
+height: 300px;
+}
+
+.container-p{
+    transform: translateX(100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .container-team {
     padding: 32px 0;
 }
@@ -267,6 +317,32 @@ margin-right:auto;
     background-color: #ffffff;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px; 
+}
+
+.icon-list{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+gap: 24px;
+}
+
+/*.item-icon{}*/
+
+.icon-link{
+
+    fill: #f4f4fd;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-icon{
+ background-color:  #4d5ae5;
+ border-radius: 100%;
+}
+
+.portfolio-icon:hover,
+.portfolio-icon:focus{
+background-color: #404bbf;
 }
 
 .container-portfolio {
@@ -298,4 +374,22 @@ margin-right:auto;
 .footer-p {
     color: #f4f4fd;
     width: 264px;
+}
+
+.footer-div{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    margin-left: 120px;
+    padding-top: 100px;
+    padding-bottom: 130px;
+}
+
+.footer-h{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #ffffff;
+margin-bottom: 16px;
 }
