--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,17 @@ img {
     color: #2e2f42;
 }
 
+.page-header::after{
+    content: "";
+    width: 100%;
+    position: absolute; 
+    left: 0;
+    bottom: -1px; 
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
 .nav-link {
     padding: 24px 0;
     display: block;
@@ -79,6 +90,9 @@ img {
     display: flex;
     align-items: center;
     gap: 40px;
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -94,6 +108,7 @@ img {
     display: flex;
     align-items: center;
     gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link {
@@ -117,10 +132,11 @@ color: #404bbf;
 }
 
 .main-section {
+    max-width: 1440px; 
  padding: 188px 0;
  background-color: #2e2f42;
  color: #ffffff;
- background-image: linear-gradient( to bottom, 
+ background-image: linear-gradient(
  rgba(46, 47, 66, 0.7),
   rgba(46, 47, 66, 0.7)),
   url(../images/people-office\ 1.png);
@@ -157,6 +173,7 @@ margin-right:auto;
     cursor: pointer;
     margin-left:auto; 
     margin-right:auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -189,6 +206,9 @@ margin-right:auto;
     background-color: #f4f4fd;
     border-radius: 4px;
     border: 1px solid #8e8f99;
+    align-items: center;
+    display: flex;
+    justify-content: center; 
 }
 
 .info-icon {
@@ -312,6 +332,7 @@ height: 300px;
 
 .container-team {
     padding: 32px 0;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .main-item {
