--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ img {
     color: #2e2f42;
 }
 
-.page-header::after{
+.nav-studio::after{
     content: "";
     width: 100%;
     position: absolute; 
@@ -74,6 +74,13 @@ img {
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
+}
+
+.nav-studio {
+    
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link {
@@ -90,9 +97,6 @@ img {
     display: flex;
     align-items: center;
     gap: 40px;
-    position: relative;
-    color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -102,13 +106,13 @@ img {
     font-size: 16px; 
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list{
     display: flex;
     align-items: center;
     gap: 40px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link {
@@ -136,13 +140,7 @@ color: #404bbf;
  padding: 188px 0;
  background-color: #2e2f42;
  color: #ffffff;
- background-image: linear-gradient(
- rgba(46, 47, 66, 0.7),
-  rgba(46, 47, 66, 0.7)),
-  url(../images/people-office\ 1.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/people-office\ 1.png);
 }
 
 .h-one {
