--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,10 @@ color: #404bbf;
  padding: 188px 0;
  background-color: #2e2f42;
  color: #ffffff;
- background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/people-office\ 1.png);
+ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/office.jpg);
+ background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover; 
 }
 
 .h-one {
