--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ img {
     color: #2e2f42;
 }
 
-.nav-item::after{
+.page-header::after{
     content: "";
     width: 100%;
     position: absolute; 
@@ -76,10 +76,16 @@ img {
     border-radius: 2px;
 }
 
-.nav-item{
-    
+.nav-studio{
     position: relative;
     color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -91,12 +97,6 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-}
-
-.nav-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
 }
 
 .address {
@@ -113,6 +113,7 @@ img {
     display: flex;
     align-items: center;
     gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link {
@@ -403,16 +404,45 @@ background-color: #404bbf;
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    margin-left: 120px;
     padding-top: 100px;
     padding-bottom: 130px;
 }
 
-.footer-h{
+.footer-contaiener {
+    margin-right: 120px;
+}
+
+.footer-h-p{
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #ffffff;
 margin-bottom: 16px;
+}
+
+.icon-list-footer {
+    display: flex; 
+    gap: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-img {
+    width: 24px;
+    height: 24px;
+}
+
+.item-icon {
+    width: 100%;
+    height: 100%;
+    border-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item-icon:hover,
+.item-icon:focus{
+    background-color: #31d0aa;
 }
