--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ img {
     color: #2e2f42;
 }
 
-.page-header::after{
+.nav-studio::after{
     content: "";
     width: 100%;
     position: absolute; 
@@ -79,7 +79,6 @@ img {
 .nav-studio{
     position: relative;
     color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list {
