--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,8 @@ img {
 .nav-studio{
     position: relative;
     color: #404bbf;
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .nav-list {
@@ -112,7 +114,6 @@ img {
     display: flex;
     align-items: center;
     gap: 40px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link {
@@ -121,6 +122,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .nav-link:hover,
