--- a/css/styles.css
+++ b/css/styles.css
@@ -335,13 +335,12 @@ height: 300px;
 
 .container-team {
     padding: 32px 0;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
-.main-item {
+.main-item{
     background-color: #ffffff;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px; 
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
 .icon-list{
@@ -351,8 +350,6 @@ justify-content: center;
 flex-direction: row;
 gap: 24px;
 }
-
-/*.item-icon{}*/
 
 .icon-link{
 
@@ -401,7 +398,7 @@ background-color: #404bbf;
     width: 264px;
 }
 
-.footer-div{
+.footer-content{
     display: flex;
     flex-direction: column;
     align-items: baseline;
