--- a/css/styles.css
+++ b/css/styles.css
@@ -343,23 +343,35 @@ height: 300px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
-.icon-list{
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: row;
-gap: 24px;
+.div-team {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
 
-.icon-link{
+.icon-list{
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+}
+
+/*.icon-link{
 
     fill: #f4f4fd;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+}*/
 
 .portfolio-icon{
- background-color:  #4d5ae5;
- border-radius: 100%;
+    background-color:  #4d5ae5;
+    border-radius: 100%;
+    flex-direction: row;
+    fill: #f4f4fd;
+}
+
+.icon-use {
+    width: 16px;
+    height: 16px;
 }
 
 .portfolio-icon:hover,
