--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,8 @@ img {
 .nav-link:hover,
 .nav-link:focus,
 .address-link:hover,
-.address-link:focus {
+.address-link:focus,
+.nav-studio {
 color: #404bbf;
 }
 
@@ -325,17 +326,14 @@ width: 360px;
 height: 300px;
 }
 
-.container-p{
-    transform: translateX(100%);
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.container-img {
+    position: relative;
 }
 
 .container-team {
     padding: 32px 0;
 }
+
 .main-item{
     background-color: #ffffff;
     width: calc((100% - 72px) / 4);
@@ -356,15 +354,15 @@ height: 300px;
 
 }
 
-/*.icon-link{
+.icon-link{
 
     fill: #f4f4fd;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}*/
+    background-color: #404bbf;
+    border-radius: 50%;
+}
 
 .portfolio-icon{
-    background-color:  #4d5ae5;
-    border-radius: 100%;
     flex-direction: row;
     fill: #f4f4fd;
 }
