--- a/css/styles.css
+++ b/css/styles.css
@@ -406,8 +406,11 @@ background-color: #404bbf;
 }
 
 .footer-p {
+    line-height: 1.5;
     color: #f4f4fd;
-    width: 264px;
+    letter-spacing: 0.02em;
+    max-width: 264px;
+    margin-bottom: 8px;
 }
 
 .footer-content{
@@ -419,40 +422,41 @@ background-color: #404bbf;
 }
 
 .footer-contaiener {
-    margin-right: 120px;
+    display: flex;
+    align-items: baseline;
 }
 
-.footer-h-p{
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #ffffff;
-margin-bottom: 16px;
+.footer-h-p{ 
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-top: 0;
+    margin-bottom: 16px;
 }
 
 .icon-list-footer {
-    display: flex; 
+    display: flex;
     gap: 16px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-img {
-    width: 24px;
-    height: 24px;
 }
 
 .icon-link-footer {
     width: 100%;
     height: 100%;
-    border-color: #4d5ae5;
-    border-radius: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link-footer:hover,
 .icon-link-footer:focus{
     background-color: #31d0aa;
+}
+
+.div-footer {
+    margin-right: 120px;
 }
